libs/vellum-compiler/parser/papyrus_lexer.cpp
#include "papyrus_lexer.h"

#include <cctype>
#include <charconv>

#include "common/string_set.h"
#include "lexer/token.h"

#ifdef __APPLE__
#include <cstdlib>
#endif

namespace vellum {

PapyrusLexer::PapyrusLexer(std::string_view source)
    : start(source.data()), current(source.data()) {}

Token PapyrusLexer::scanToken() {
  skipWhitespaces();
  start = current;

  if (isAtEnd()) {
    return makeToken(TokenType::END_OF_FILE);
  }

  const char c = advance();

  if (isDigit(c)) {
    return number();
  }

  if (isAlpha(c)) {
    return identifier();
  }

  switch (c) {
    case '\\':
      // Handle line continuation: backslash followed by optional whitespace and
      // newline
      advance();  // consume backslash
      // Skip whitespace (but not newlines) after backslash
      while (peek() == ' ' || peek() == '\t' || peek() == '\r') {
        advance();
      }
      // Now check for newline
      if (peek() == '\n') {
        advance();  // consume newline
        line++;
        position = 0;
        return scanToken();  // recursively scan next token
      }
      return errorToken("Unexpected character '\\'.");
    case '(':
      return makeToken(TokenType::LEFT_PAREN);
    case ')':
      return makeToken(TokenType::RIGHT_PAREN);
    case '{':
      return makeToken(TokenType::LEFT_BRACE);
    case '}':
      return makeToken(TokenType::RIGHT_BRACE);
    case '[':
      return makeToken(TokenType::LEFT_BRACK);
    case ']':
      return makeToken(TokenType::RIGHT_BRACK);
    case ':':
      return makeToken(TokenType::COLON);
    case ';':
      if (peek() == '/') {
        skipSemicolonBlockComment();
        return scanToken();
      }
      skipLineComment();
      return scanToken();
    case ',':
      return makeToken(TokenType::COMMA);
    case '.':
      return makeToken(TokenType::DOT);
    case '-':
      return makeToken(match('>') ? TokenType::ARROW : TokenType::MINUS);
    case '+':
      return makeToken(TokenType::PLUS);
    case '/':
      return makeToken(TokenType::SLASH);
    case '*':
      return makeToken(TokenType::STAR);
    case '%':
      return makeToken(TokenType::PERCENT);
    case '!':
      return makeToken(match('=') ? TokenType::BANG_EQUAL : TokenType::BANG);
    case '=':
      return makeToken(match('=') ? TokenType::EQUAL_EQUAL : TokenType::EQUAL);
    case '<':
      return makeToken(match('=') ? TokenType::LESS_EQUAL : TokenType::LESS);
    case '>':
      return makeToken(match('=') ? TokenType::GREATER_EQUAL
                                  : TokenType::GREATER);
    case '&':
      if (match('&')) {
        return makeToken(TokenType::AND);
      }
      break;
    case '|':
      if (match('|')) {
        return makeToken(TokenType::OR);
      }
      break;
    case '"':
      return string();
  }

  return errorToken(
      common::StringSet::insert(std::format("Unexpected character '{}'.", c)));
}
